2008-06-10  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer-db.[ch]
	(tracker_db_set_metadata): Add argument to pass the parsed string for
	a value. Store data in the correct tables depending on the field data
	type.
	* src/tracker-indexer/tracker-indexer.c (index_metadata_foreach): pass
	the parsed value string to tracker_db_set_metadata().

2008-06-10  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-common/tracker-parser.c
	(tracker_parser_text_to_string): Return a stripped string.

2008-06-10  Martyn Russell  <martyn@imendio.com>

	* configure.ac: 
	* src/libtracker-gtk/tracker-metadata-tile.c:
	* src/libtracker/tracker-search.c: (main):
	* src/libtracker/tracker-tag.c: (main):
	* src/tracker-indexer/tracker-main.c: (main):
	* src/trackerd/tracker-main.c: (main):
	* src/trackerd/tracker-watcher.h: Removed the RECENT_GLIB
	definition, it was checking for GLib 2.12, when we depend on 2.14
	anyway. Also removed all places where we uses #if statements for
	RECENT GLIB.

2008-06-09  Ivan Frade  <ivan.frade@nokia.com>
	
	* src/libtracker-db/tracker-db-dbus.[ch]:
	(tracker_dbus_query_result_to_strv) Added new parameter to select
	the column.
	* src/trackerd/tracker-files.c
	* src/trackerd/tracker-keywords.c
	* src/trackerd/tracker-metadata.c
	* src/trackerd/tracker-search.c: Updated method calls
	This fixes the get_registered_metadata method.

2008-06-09  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer-db.[ch] (tracker_db_set_text):
	New function, saves text into the content database.
	* src/tracker-indexer/tracker-indexer.c (init_indexer): create content
	database.
	(process_file): get text content and store it in the database.
	(tracker_indexer_finalize): Do not unref here the database
	connections, they're already taken care of by the DB manager.

2008-06-09  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-manager.c (function_compress_string)